--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,25 +24,29 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/com.skp.Tmap_1.0.48.jar')
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.tsengvn:Typekit:1.0.0'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-core-utils:24.2.0'
+    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:support-core-utils:25.+'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
     compile 'com.squareup.retrofit2:retrofit:2.3.+'
     compile 'com.squareup.retrofit2:converter-gson:2.3.+'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:design:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:25.+'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.google.android.gms:play-services-location:10.2.6'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.facebook.rebound:rebound:0.3.8'
+    compile 'com.tumblr:backboard:0.1.0'
+    compile 'com.android.support:cardview-v7:25.+'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)' // 페이스북 로그인
+    compile 'com.yqritc:android-scalablevideoview:1.0.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile files('libs/com.skp.Tmap_1.0.48.jar')
-    compile 'com.android.support:cardview-v7:24.+'
 }
