--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/com.skp.Tmap_1.0.48.jar')
+    // 페이스북 로그인
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.tsengvn:Typekit:1.0.0'
     compile 'com.android.support:appcompat-v7:25.+'
@@ -45,8 +46,14 @@ dependencies {
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.tumblr:backboard:0.1.0'
     compile 'com.android.support:cardview-v7:25.+'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)' // 페이스북 로그인
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.yqritc:android-scalablevideoview:1.0.4'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
