--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.+'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.yqritc:android-scalablevideoview:1.0.4'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
