--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,28 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+            additionalParameters('jack.incremental': 'true')
+
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+//    compileOptions {
+//        targetCompatibility 1.8
+//        sourceCompatibility 1.8
+//    }
+    dexOptions {
+        javaMaxHeapSize '4096m'
     }
 }
 
@@ -24,7 +40,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/com.skp.Tmap_1.0.48.jar')
     // 페이스북 로그인
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.tsengvn:Typekit:1.0.0'
@@ -35,6 +50,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.+'
     compile 'com.squareup.retrofit2:converter-gson:2.3.+'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'io.reactivex.rxjava2:rxjava:2.+'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.android.support:design:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -53,8 +69,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
-
-
-
-
 apply plugin: 'com.google.gms.google-services'
